--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -1,6 +1,6 @@
 <div class="container bg-white">
     <div class="row">
-        <h2 class="text-center mt-5">Proyectos</h2>
+        <h2 class="text-center mt-5" id="projects">Proyectos</h2>
         <div class="col-lg-4 col-12 my-lg-4  mt-md-4 my-md-0  my-4 ">
             <div class="row">
                 <div class="col-lg-12 col-md col-12 mb-mb-0 mb-4">
