--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -6,9 +6,9 @@
 
         </div>
         <div class="about-content" *ngIf="isLogged">
-            <div class="column right">
+            <!-- <div class="column right">
                 <a href="" class="mb-2 ms-5">Editar</a>
-            </div>
+            </div> -->
         </div>
         <div class="about-content">
             <div class="column left">
@@ -16,13 +16,13 @@
             </div>
             <div class="column right">
                 <div class="text">
-                    Yo soy {{usuario.nombre}} and I'm a <span class="typing-2">Desarrollador de Software</span>
+                    Yo soy {{usuario.nombre}}. Soy <span class="typing-2">{{usuario.titulo}}</span>
                 </div>
-                <p contenteditable="true">
-                    {{usuario.descripcion}}.{{usuario.nombre}}
+                <p contenteditable="false">
+                    {{usuario.descripcion}}.
                 </p>
-                <a href="https://drive.google.com/file/d/1nphjZ5DbAGzRQjQbm1TIZ2xN1CM1EPZV/view?usp=sharing"
-                    target="_blank">Download Resume</a>
+                <a href="https://github.com/ignam03"
+                    target="_blank">Visitar Github</a>
             </div>
         </div>
     </div>
