--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -3,34 +3,55 @@
     <div class="max-width">
         <div class="home-content">
             <div class="text-1">Hola, mi nombre es </div>
-            <div class="login-icon" *ngIf="isLogged">
-                <ul>
-                    <li class="right">
-                        <a href="#openLoginModal"><i class="fa fa-pencil"></i></a>
-                    </li>
-                </ul>
-            </div><!-- login Modal starts here    ================================================== -->
-            <div class="modalDialog" id="openLoginModal">
-                <div class="login-container">
-                    <div class="img-container"><img alt="Avatar" class="login-avatar" src=
-                    "{{usuario.fotoPerfil}}"></div>
-                    <div class="login-info">
-                        <form action="">
-                            <label for="idNombre"><b class="text-black text-center">Nombre</b></label> <input name="nombre" id="idNombre" placeholder="{{usuario.nombre}}" required="" [(ngModel)]="usuario.nombre" type="text">
-                            <label for="idApellido"><b class="text-black">Apellido</b></label> <input name="apellido" id="idApellido" [(ngModel)]="usuario.apellido" placeholder="{{usuario.apellido}}" required="" type="text">
-                            <label for="idDesc"><b class="text-black">Descripcion</b></label><br><textarea name="descripcion" id="idDesc" [(ngModel)]="usuario.descripcion" placeholder="{{usuario.descripcion}}" required="true" cols="80" rows="6"></textarea> 
-                            <label for="idTitulo"><b class="text-black">Titulo</b></label> <input name="titulo" name="idTitulo" [(ngModel)]="usuario.titulo" placeholder="{{usuario.titulo}}" required="" type="text">
-                            <label for="idImg"><b class="text-black text-center">Foto de perfil</b></label> <input name="imagen" id="idImg" placeholder="{{usuario.nombre}}" required="" [(ngModel)]="usuario.fotoPerfil" type="text">
-                            <div class="login-bottom-container">
-                                <span type="submit" class="psw"><a href="#" (click)="updateUsuario()">Actualizar Datos.</a></span>
-                                <button class="btn "type="button" (click)="updateUsuario()"></button>
-                            </div><a class="login-modal-close" href="#close">Cancel</a> <input checked="checked" type="checkbox"> Remember me
-                        </form>
+            <div class="container">
+                <a class="button fa fa-pencil" href="#popup" *ngIf="isLogged"></a>
+                <div class="popup" id="popup">
+                    <div class="popup-inner">
+                        <div class="popupphoto">
+                            <img src="https://images.pexels.com/photos/193349/pexels-photo-193349.jpeg?cs=srgb&dl=access-algorithm-binary-193349.jpg&fm"
+                                alt="">
+                        </div>
+                        <div class="popuptext">
+                            <h1>Actualizar mis Datos</h1>
+                            <div class="container">
+                                <form id="contact" action="" method="post">
+                                    <h3>Informacion</h3>
+                                    <h4></h4>
+                                    <fieldset>
+                                        <input placeholder="Nombre" id="idNombre" name="nombre"
+                                            [(ngModel)]="usuario.nombre" type="text" tabindex="1" required
+                                            autofocus>
+                                    </fieldset>
+                                    <fieldset>
+                                        <input placeholder="Apellido" id="idApellido" name="apellido"
+                                            [(ngModel)]="usuario.apellido" type="text" tabindex="2" required>
+                                    </fieldset>
+                                    <fieldset>
+                                            <textarea name="descripcion" id="idDes" [(ngModel)]="usuario.descripcion" cols="30" rows="10"></textarea>
+                                    </fieldset>
+                                    <fieldset>
+                                        <input placeholder="Titulo" id="idTitulo" name="titulo"
+                                            [(ngModel)]="usuario.titulo" type="text" tabindex="2" required>
+                                    </fieldset>
+                                    <fieldset>
+                                        <input placeholder="Imagen" id="idImg" name="imagen"
+                                            [(ngModel)]="usuario.fotoPerfil" type="text" tabindex="2" required>
+                                    </fieldset>
+                                    <fieldset>
+                                        <button name="submit" type="submit" id="contact-submit"
+                                            data-submit="...Sending" (click)="updateUsuario()">Actualizar</button>
+                                    </fieldset>
+                                </form>
+                            </div>
+                        </div>
+                        <a class="closepopup" href="#">X</a>
                     </div>
                 </div>
             </div>
-            <div class="text-2"><span><</span><span>/</span>{{usuario.nombre}} {{usuario.apellido}} <span>></span></div>
+            <div class="text-2"><span><</span><span>/</span>{{usuario.nombre}} {{usuario.apellido}} <span>></span>
+            </div>
             <div class="text-3">Yo Soy  <span class="typing">{{usuario.titulo}}</span></div>
+            
             <a href="https://github.com/ignam03" target="_blank"><i class="fa fa-github"></i> Github</a>
         </div>
     </div>
