las changes in header and skill buttons

--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-10 m-auto">
-            <h2 class="text-center">Educacion</h2>
+            <h2 class="text-center" id="education">Educacion</h2>
             <div class="container">
                 <div class="timeline clearfix">
                     <div class="vertical-line">
