--- a/src/app/components/layout/header.component.html
+++ b/src/app/components/layout/header.component.html
@@ -7,7 +7,7 @@
         <ul class="menu">
             <li><a href="#home" class="menu-btn">Home</a></li>
             <li><a href="#about" class="menu-btn">Sobre mí</a></li>
-            <li><a href="#about" class="menu-btn">Educacion</a></li>
+            <li><a href="#education" class="menu-btn">Educacion</a></li>
             <li><a href="#skills" class="menu-btn">Skills</a></li>
             <li><a href="#projects" class="menu-btn">Proyectos</a></li>
             <li><a class=" menu-btn " (click)="login()" *ngIf="!isLogged">Login</a></li>
