--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -4,8 +4,8 @@
         <h2 class="title">Mis skills</h2>
         <body>
             <div class="container">
-                <a class="button" href="#popup" *ngIf="isLogged">Agregar skill</a>
-                <div class="popup" id="popup">
+                <a class="button" href="#popup9" *ngIf="isLogged">Agregar skill</a>
+                <div class="popup" id="popup9">
                     <div class="popup-inner">
                         <div class="popupphoto">
                             <img src="https://images.pexels.com/photos/193349/pexels-photo-193349.jpeg?cs=srgb&dl=access-algorithm-binary-193349.jpg&fm"
