--- a/src/app/components/proyecto/proyecto.component.html
+++ b/src/app/components/proyecto/proyecto.component.html
@@ -8,9 +8,9 @@
                         <img src="../../../assets/images/Screenshot 2022-08-03 at 21-30-41 Portafolio.png"
                             class="pic1" alt="">
                         <div class="overlay">
-                            <p>The Al magically removes moving</p>
-                            <p>objects from videos</p>
-                            <p class="text-muted fw-light">July 19, 2019</p>
+                            <p>Portafolio hecho con Html, Css, JavaScript</p>
+                            <p>c.m</p>
+                            <p class="text-muted fw-light">Septiembre 19, 2021</p>
                         </div>
                     </div>
                 </div>
@@ -19,9 +19,9 @@
                         <img src="../../../assets/images/Screenshot 2022-08-03 at 21-34-00 Proyecto.png"
                             class="pic1" alt="">
                         <div class="overlay">
-                            <p>The Al magically removes moving</p>
-                            <p>objects from videos</p>
-                            <p class="text-muted fw-light">July 19, 2019</p>
+                            <p>Front-End hecho con angular & NodeJs consumiendo una api externa</p>
+                            <p></p>
+                            <p class="text-muted fw-light">Agosto 3, 2020</p>
                         </div>
                     </div>
                 </div>
@@ -36,9 +36,9 @@
                         <span class="badge bg-danger">TRAVEL</span>
                         <span class="badge bg-primary">FOOD</span>
                     </div>
-                    <p>The Al magically removes moving</p>
-                    <p>objects from videos</p>
-                    <p class="text-muted fw-light">July 19, 2019</p>
+                    <p>Portal de Empleos web</p>
+                    <p>Uso de Java, MySQL, Springboot, Html, Css, JavaScript</p>
+                    <p class="text-muted fw-light">Mayo 28, 2022</p>
                 </div>
             </div>
         </div>
@@ -49,9 +49,9 @@
                         <img src="../../../assets/images/Screenshot 2022-08-03 at 21-45-32 Frontend.png"
                             class="pic1" alt="">
                         <div class="overlay">
-                            <p>The Al magically removes moving</p>
+                            <p>Aplicacion hecha con angular y nodejs creando api propia y consumiendo api externa</p>
                             <p>objects from videos</p>
-                            <p class="text-muted fw-light">July 19, 2019</p>
+                            <p class="text-muted fw-light">Mayo 29, 2022</p>
                         </div>
                     </div>
                 </div>
@@ -60,9 +60,9 @@
                         <img src="../../../assets/images/Screenshot 2022-08-03 at 21-51-13 PracticaAngular.png"
                             class="pic1" alt="">
                         <div class="overlay">
-                            <p>The Al magically removes moving</p>
-                            <p>objects from videos</p>
-                            <p class="text-muted fw-light">July 19, 2019</p>
+                            <p>Sistemas de anuncios</p>
+                            <p>Hecho con Angular y NodeJs consumiendo api propia</p>
+                            <p class="text-muted fw-light">Julio 19, 2022</p>
                         </div>
                     </div>
                 </div>
