change buttons style

--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -518,17 +518,19 @@ fieldset {
 
 #contact button[type="submit"] {
 	cursor:pointer;
-	width:100%;
-	border:none;
-	background:#0CF;
-	color:#FFF;
-	margin:0 0 5px;
-	padding:10px;
-	font-size:15px;
+  width:100%;
+  border:1px solid #DC143C;
+  text-color:black;
+  background:#DC143C;
+  color:#FFF;
+  margin:0 0 5px;
+  padding:10px;
+  font-size:15px;
 }
 
 #contact button[type="submit"]:hover {
-	background:#09C;
+	background:#FFF;
+  color:#DC143C;
 	-webkit-transition:background 0.3s ease-in-out;
 	-moz-transition:background 0.3s ease-in-out;
 	transition:background-color 0.3s ease-in-out;
