services text change

--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -8,8 +8,7 @@
                     <i class="fa fa-code"></i>
                     <div class="text">Web Apps and Software</div>
                     <p>
-                        Using Front-End libraries, I build fast, interactive websites. I
-                        use Node JS and Express app in Back-End side.
+                        Usando bibliotecas Front-End, construyo sitios web rápidos e interactivos. Uso Java, Angular, Node JS y la aplicación Express en el lado de Back-End.
                     </p>
                 </div>
             </div>
@@ -18,8 +17,8 @@
                     <i class="fa fa-mobile"></i>
                     <div class="text">RESPONSIVE</div>
                     <p>
-                        I have a working knowledge of drafting mechanical drawings and
-                        creating 3D models in SolidWork
+                        Tengo un conocimiento práctico de la redacción de dibujos mecánicos y
+                        crear modelos 3D en SolidWork
                     </p>
                 </div>
             </div>
@@ -28,8 +27,8 @@
                     <i class="fa fa-pencil-square"></i>
                     <div class="text">Web Design</div>
                     <p>
-                        I am currently getting fimiliar with data science and machine
-                        learning technologies
+                        Actualmente me estoy familiarizando con la ciencia de datos y la máquina.
+                        tecnologías de aprendizaje
                     </p>
                 </div>
             </div>
