--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -76,7 +76,7 @@
                                                 </fieldset>
                                                 <fieldset>
                                                     <button name="submit" type="submit" id="contact-submit"
-                                                        data-submit="...Sending" (click)="createdSkill()">Actualizar</button>
+                                                        data-submit="...Sending" (click)="updateSkill()">Actualizar</button>
                                                 </fieldset>
                                             </form>
                                         </div>
