--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -7,8 +7,7 @@
                 <div class="box">
                     <i class="fa fa-code"></i>
                     <div class="text">Web Apps and Software</div>
-                    <p>
-                        Usando bibliotecas Front-End, construyo sitios web rápidos e interactivos. Uso Java, Angular, Node JS y la aplicación Express en el lado de Back-End.
+                    <p>Construyo sitios web rápidos e interactivos. Uso Angular, Java, Node JS en el lado de Back-End.
                     </p>
                 </div>
             </div>
@@ -24,8 +23,8 @@
             </div>
             <div class="card">
                 <div class="box">
-                    <i class="fa fa-pencil-square"></i>
-                    <div class="text">Web Design</div>
+                    <i class="fa fa-database"></i>
+                    <div class="text">Data Analyst</div>
                     <p>
                         Actualmente me estoy familiarizando con la ciencia de datos y la máquina.
                         tecnologías de aprendizaje
