--- a/src/app/components/banner/banner.component.css
+++ b/src/app/components/banner/banner.component.css
@@ -93,7 +93,7 @@ section .title::after {
 /* home section styling */
 .home {
   display: flex;
-  background: url("https://i.ibb.co/SPZD6fx/banner.jpg") no-repeat center;
+  background: url("../../../assets/images/banner.jpg") no-repeat center;
   height: 100vh;
   color: #fff;
   min-height: 500px;
